Added save barcode
